from datetime import datetime
from typing import List, Optional

from sqlalchemy import String, Integer, ForeignKey, Text, DateTime, UniqueConstraint, Any, Table, Column
from sqlalchemy.orm import DeclarativeBase, Mapped, mapped_column, relationship
from sqlalchemy.ext.associationproxy import association_proxy, AssociationProxy
from sqlalchemy.dialects.postgresql import JSONB


class Base(DeclarativeBase):
    pass


alias_edges = Table(
    "alias_edges",
    Base.metadata,
    Column("alias_left_id", Integer, ForeignKey("vulnerabilities.pk_id", ondelete="CASCADE"), primary_key=True),
    Column("alias_right_id", Integer, ForeignKey("vulnerabilities.pk_id", ondelete="CASCADE"), primary_key=True)
)

upstream_edges = Table(
    "upstream_edges",
    Base.metadata,
    Column("upstream_id", Integer, ForeignKey("vulnerabilities.pk_id", ondelete="CASCADE"), primary_key=True),
    Column("downstream_id", Integer, ForeignKey("vulnerabilities.pk_id", ondelete="CASCADE"), primary_key=True)
)

related_edges = Table(
    "related_edges",
    Base.metadata,
    Column("related_left_id", Integer, ForeignKey("vulnerabilities.pk_id", ondelete="CASCADE"), primary_key=True),
    Column("related_right_id", Integer, ForeignKey("vulnerabilities.pk_id", ondelete="CASCADE"), primary_key=True)
)


class Affection(Base):
    """
    Связующая таблица (Association Object) для Vulnerability и Package.
    Содержит дополнительные данные о связи (severity, ranges)
    """
    __tablename__ = "affections"

    vuln_id: Mapped[int] = mapped_column(ForeignKey("vulnerabilities.pk_id", ondelete="CASCADE"), primary_key=True)
    pack_id: Mapped[int] = mapped_column(ForeignKey("packages.pk_id", ondelete="CASCADE"), primary_key=True)

    severity: Mapped[Optional[str]] = mapped_column(String(64))
    ranges: Mapped[Optional[bytes]] = mapped_column(JSONB)

    vulnerability: Mapped["Vulnerability"] = relationship(back_populates="package_links")
    package: Mapped["Package"] = relationship(back_populates="vulnerability_links")

    def __repr__(self) -> str:
        return f"<Affection(vuln_id={self.vuln_id}, pack_id={self.pack_id})>"


class Vulnerability(Base):
    """
    Таблица уязвимостей
    """
    __tablename__ = "vulnerabilities"

    pk_id: Mapped[int] = mapped_column(Integer, primary_key=True, autoincrement=True)
    id: Mapped[Optional[str]] = mapped_column(String(64), unique=True, nullable=False)
    summary: Mapped[Optional[str]] = mapped_column(Text)
    published: Mapped[Optional[datetime]] = mapped_column(DateTime(timezone=True))
    withdrawn: Mapped[Optional[datetime]] = mapped_column(DateTime(timezone=True))

    aliases: Mapped[Optional[Any]] = mapped_column(JSONB)
    upstream: Mapped[Optional[Any]] = mapped_column(JSONB)
    related: Mapped[Optional[Any]] = mapped_column(JSONB)

    severity: Mapped[Optional[str]] = mapped_column(String(64))
    cwe_id: Mapped[int] = mapped_column(Integer)
    severity_text: Mapped[Optional[str]] = mapped_column(String(16))

    alias_forward_neighbors: Mapped[List["Vulnerability"]] = relationship(
        "Vulnerability",
        secondary=alias_edges,
        primaryjoin=pk_id == alias_edges.c.alias_left_id,
        secondaryjoin=pk_id == alias_edges.c.alias_right_id,
        back_populates="alias_backward_neighbors"
    )

    alias_backward_neighbors: Mapped[List["Vulnerability"]] = relationship(
        "Vulnerability",
        secondary=alias_edges,
        primaryjoin=pk_id == alias_edges.c.alias_right_id,
        secondaryjoin=pk_id == alias_edges.c.alias_left_id,
        back_populates="alias_forward_neighbors"
    )

    related_forward_neighbors: Mapped[List["Vulnerability"]] = relationship(
        "Vulnerability",
        secondary=related_edges,
        primaryjoin=pk_id == related_edges.c.related_left_id,
        secondaryjoin=pk_id == related_edges.c.related_right_id,
        back_populates="related_backward_neighbors"
    )

    related_backward_neighbors: Mapped[List["Vulnerability"]] = relationship(
        "Vulnerability",
        secondary=related_edges,
        primaryjoin=pk_id == related_edges.c.related_right_id,
        secondaryjoin=pk_id == related_edges.c.related_left_id,
        back_populates="related_forward_neighbors"
    )

    @property
    def equivalent_aliases(self) -> List["Vulnerability"]:
        """Возвращает всех соседей по графу элиасов"""
        return self.alias_forward_neighbors + self.alias_backward_neighbors

    @property
    def equivalent_related(self) -> List["Vulnerability"]:
        """Возвращает всех соседей по графу связанных"""
        return self.related_forward_neighbors + self.related_backward_neighbors

    downstreams: Mapped[List["Vulnerability"]] = relationship(
        "Vulnerability",
        secondary=upstream_edges,
        primaryjoin=pk_id == upstream_edges.c.upstream_id,
        secondaryjoin=pk_id == upstream_edges.c.downstream_id,
        back_populates="upstreams"
    )

    upstreams: Mapped[List["Vulnerability"]] = relationship(
        "Vulnerability",
        secondary=upstream_edges,
        primaryjoin=pk_id == upstream_edges.c.downstream_id,
        secondaryjoin=pk_id == upstream_edges.c.upstream_id,
        back_populates="downstreams"
    )

    package_links: Mapped[List["Affection"]] = relationship(
        back_populates="vulnerability",
        cascade="all, delete-orphan"
    )

    packages: AssociationProxy[List["Package"]] = association_proxy(
        "package_links",
        "package"
    )


def __repr__(self) -> str:
    return f"<Vulnerability(id={self.pk_id}, cwe_id={self.cwe_id})>"


class Package(Base):
    """
    Таблица пакетов
    """
    __tablename__ = "packages"

    pk_id: Mapped[int] = mapped_column(Integer, primary_key=True, autoincrement=True)
    ecosystem: Mapped[str] = mapped_column(String(64))
    name: Mapped[str] = mapped_column(String(64))

    __table_args__ = (
        UniqueConstraint("ecosystem", "name", name="uix_package_ecosystem_name"),
    )

    vulnerability_links: Mapped[List["Affection"]] = relationship(
        back_populates="package",
        cascade="all, delete-orphan"
    )

    vulnerabilities: AssociationProxy[List["Vulnerability"]] = association_proxy(
        "vulnerability_links",
        "vulnerability"
    )

    def __repr__(self) -> str:
        return f"<Package(ecosystem={self.ecosystem}, name={self.name})>"
